fix: scroll bar Y to invisible fixed while app first mount/refresh

--- a/src/Index.css
+++ b/src/Index.css
@@ -30,6 +30,9 @@ body.loaded,
 #root.loaded {
   background: #000000;
 }
+html:not(.loaded) {
+  overflow: hidden;
+}
 
 body {
   font-family: "Poppins", sans-serif;
